data/derived/sp14/progs/unify/prog2099.ml.out
Characters 69-70:
  let fixpoint (f,b) = wwhile (let g = let bb = f b in (bb, bb = b) in g, b);;
                                                                       ^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
